dataset1235/2025-2/1379599236/users/3662229893/executions/2277843042_2667036473.log
== SUBMISSION (2025-08-25 19:10:04)
-- CODE: 
Celsius = float(input("digite um numero: "))
kelvin = Celsius + 275.15
print(roun(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:02:02)
-- CODE: 
Celsius = float(input("Digite um numero: "))

kelvin = Celsius + 273.15
kelvin_arredondado = round(kelvin,2)

print(kelvin_arredondado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite um numero: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite um numero: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite um numero: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite um numero: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite um numero: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite um numero: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:00:46)
-- CODE: 
Celsius = float(input("Digite um numero: "))

kelvin = Celsius + 273.15

print(round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite um numero: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite um numero: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite um numero: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite um numero: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite um numero: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite um numero: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:10:57)
-- CODE: 
Celsius = float(input("Digite um numero: "))
kelvin = Celsius + 273.15
print(roun(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:07:39)
-- CODE: 
Celsius = float(input("Digite um numero: "))

kelvin = Celsius + 273.15
kelvin_arredondado = round(kelvin,2)

print(kelvin_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite um numero: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite um numero: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite um numero: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite um numero: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite um numero: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite um numero: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:09:39)
-- CODE: 
Celsius = float(input("digite um numero: "))
kelvin = Celsius + 275.15
Print(roun(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(roun(kelvin,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(roun(kelvin,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(roun(kelvin,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(roun(kelvin,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(roun(kelvin,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(roun(kelvin,2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:10:03)
-- CODE: 
Celsius = float(input("digite um numero: "))
kelvin = Celsius + 275.15
print(roun(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:11:22)
-- CODE: 
Celsius = float(input("Digite um numero: "))
kelvin = Celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite um numero: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite um numero: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite um numero: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite um numero: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite um numero: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite um numero: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:00:00)
-- CODE: 
Celsius = float(input("Digite um numero: "))

kelvin = Celsius + 273.15

print(kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite um numero: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite um numero: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite um numero: 233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite um numero: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite um numero: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite um numero: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:10:56)
-- CODE: 
Celsius = float(input("Digite um numero: "))
kelvin = Celsius + 273.15
print(roun(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:10:16)
-- CODE: 
Celsius = float(input("digite um numero: "))
kelvin = Celsius + 275.15
print(roun(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:10:30)
-- CODE: 
Celsius = float(input("digite um numero: "))
kelvin = Celsius + 273.15
print(roun(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin, 2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:10:02)
-- CODE: 
Celsius = float(input("digite um numero: "))
kelvin = Celsius + 275.15
print(roun(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roun(kelvin,2))
          ^^^^
NameError: name 'roun' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:07:31)
-- CODE: 
Celsius = float(input("Digite um numero: "))

kelvin = Celsius + 273.15
kelvin_arredondado = round(kelvin,2)

print(kelvin_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite um numero: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite um numero: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite um numero: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite um numero: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite um numero: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite um numero: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
